--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         SCP({
             selector: '#spotify-widget',
-            username: 'mashteroth',  // Replace with your Last.fm username
+            username: 'mashteroth@gmail.com',  // Replace with your Last.fm username
             api_key: 'e3f5ddd433c057fbd09fef545bef3014',   // Replace with your Last.fm API key
             width: '100%',
             height: '370'
