--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div id="debug-info">Widget should appear below:</div>
     <div id="spotify-widget"></div>
-    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
+    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>"></script>
     <script>
         try {
             if (typeof SCP === 'undefined') {
