--- a/index.html
+++ b/index.html
@@ -2,56 +2,23 @@
 <html>
 <head>
     <title>Spotify Widget</title>
-    <style>
-        body { 
-            margin: 0; 
-            padding: 0; 
-            background: transparent;
-        }
-        #spotify-widget {
-            min-height: 370px;
-            border: 1px solid #ccc;
-            padding: 10px;
-        }
-        #debug-info {
-            color: #666;
-            font-family: Arial, sans-serif;
-        }
-    </style>
 </head>
 <body>
-    <div id="debug-info">Widget should appear below:</div>
+    <!-- Create the container -->
     <div id="spotify-widget"></div>
-    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>"></script>
+
+    <!-- Add the official script from npm -->
+    <script src="https://unpkg.com/spotifycurrentlyplaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
+    
+    <!-- Initialize the widget -->
     <script>
-        try {
-            if (typeof SCP === 'undefined') {
-                document.getElementById('debug-info').innerHTML += '<br>Error: SCP function not loaded';
-            } else {
-                document.getElementById('debug-info').innerHTML += '<br>SCP function loaded successfully';
-                SCP({
-                    selector: '#spotify-widget',
-                    username: 'mashteroth',  // Make sure to replace this
-                    api_key: '38fc92bd75e3f57955fa91605dbf34d3',   // Make sure to replace this
-                    width: '100%',
-                    height: '370'
-                });
-                document.getElementById('debug-info').innerHTML += '<br>SCP function called';
-            }
-        } catch (error) {
-            document.getElementById('debug-info').innerHTML += '<br>Error: ' + error.message;
-        }
-    </script>
-    <script>
-        // Check if the widget div is empty after a short delay
-        setTimeout(() => {
-            const widget = document.getElementById('spotify-widget');
-            if (widget.children.length === 0) {
-                document.getElementById('debug-info').innerHTML += '<br>Widget div is empty after initialization';
-            } else {
-                document.getElementById('debug-info').innerHTML += '<br>Widget content found';
-            }
-        }, 2000);
+        SCP({
+            selector: '#spotify-widget',
+            username: 'mashteroth',
+            api_key: 'e3f5ddd43c057fbd09fef545bef3014',
+            width: '100%',
+            height: '370'
+        });
     </script>
 </body>
 </html>
