--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Spotify Profile</title>
-    <!-- Add CSP meta tag to allow Spotify embed -->
-    <meta http-equiv="Content-Security-Policy" 
-          content="default-src 'self'; 
-                   frame-src https://open.spotify.com/;
-                   style-src 'self' 'unsafe-inline';">
-    <style>
-        body { 
-            margin: 0; 
-            padding: 0; 
-            background: transparent;
-        }
-        .spotify-wrapper {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-    </style>
+    <title>Spotify Widget</title>
 </head>
 <body>
-    <div class="spotify-wrapper">
-        <iframe 
-            title="Spotify Profile"
-            src="https://open.spotify.com/embed/user/caroach82"
-            width="100%" 
-            height="380" 
-            style="border-radius:12px; border:none;"
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-        </iframe>
-    </div>
+    <!-- Create a container -->
+    <div id="spotify-widget"></div>
+
+    <!-- Add the script before the closing body tag -->
+    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
+
+    <!-- Call the SCP() function -->
+    <script>
+        SCP({
+            selector: '#spotify-widget',
+            username: 'mashteroth',
+            api_key: 'e3f5ddd43c057fbd09fef545bef3014',
+            width: '100%',
+            height: '370'
+        });
+    </script>
 </body>
 </html>
