--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Spotify Widget</title>
-    <!-- Add CSP meta tag to allow necessary resources -->
+    <!-- Add CSP meta tag with unsafe-eval -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self' npmcdn.com;
-                   script-src 'self' 'unsafe-inline' npmcdn.com;
+                   script-src 'self' 'unsafe-inline' 'unsafe-eval' npmcdn.com;
                    style-src 'self' 'unsafe-inline';">
 </head>
 <body>
@@ -13,12 +13,10 @@
     <div id="spotify-widget"></div>
 
     <!-- Add the script before the closing body tag -->
-    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js" 
-            integrity="sha384-" 
-            crossorigin="anonymous"></script>
+    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
 
     <!-- Call the SCP() function -->
-    <script nonce="random-nonce">
+    <script>
         SCP({
             selector: '#spotify-widget',
             username: 'mashteroth',
