--- a/index.html
+++ b/index.html
@@ -1,29 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Spotify Widget</title>
-    <!-- Add CSP meta tag with unsafe-eval -->
-    <meta http-equiv="Content-Security-Policy" 
-          content="default-src 'self' npmcdn.com;
-                   script-src 'self' 'unsafe-inline' 'unsafe-eval' npmcdn.com;
-                   style-src 'self' 'unsafe-inline';">
-</head>
 <body>
-    <!-- Create a container -->
-    <div id="spotify-widget"></div>
-
-    <!-- Add the script before the closing body tag -->
-    <script src="https://npmcdn.com/spotifyCurrentlyPlaying.js/dist/spotifyCurrentlyPlaying.min.js"></script>
-
-    <!-- Call the SCP() function -->
-    <script>
-        SCP({
-            selector: '#spotify-widget',
-            username: 'mashteroth',
-            api_key: 'e3f5ddd43c057fbd09fef545bef3014',
-            width: '100%',
-            height: '370'
-        });
-    </script>
+    <iframe 
+        style="border-radius:12px" 
+        src="https://open.spotify.com/embed/user/caroach82" 
+        width="100%" 
+        height="352" 
+        frameborder="0" 
+        allowfullscreen="" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy">
+    </iframe>
 </body>
 </html>
